--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="app">
         <template v-if="showData">
-            <h2> Hello {{ name }} <span v-show="hasProfile"> <a v-bind:href="siteUrl" target="_blank">facebook profile</a> </span> </h2>
+            <h2> Hello {{ name | lowercase | capitalize}} <span v-show="hasProfile"> <a v-bind:href="siteUrl" target="_blank">facebook profile</a> </span> </h2>
         </template>
     </div>
 
@@ -22,6 +22,17 @@
                 siteUrl: 'https://www.facebook.com/profile.php?id=100006691396145',
                 hasProfile: true,
                 showData: true
+            },
+            filters: {
+                uppercase: str => {
+                    return str.toUpperCase()
+                },
+                lowercase: str => {
+                    return str.toLowerCase()
+                },
+                capitalize: str => {
+                    return str.charAt(0).toUpperCase() + str.slice(1);
+                }
             }
         })
     </script>
