--- a/index.html
+++ b/index.html
@@ -15,6 +15,28 @@
         <span>Counter value is {{ counter }}</span>
         <input type="button" @click="sumCounter" value="+"/>
         <input type="button" v-on:click="diffCounter" value="-"/>
+
+        <br/> <br/>
+        <hr/>
+        <br/>
+
+        <input type="text" placeholder="fullName" v-model="dataForm.fullName"/>
+        <span> The Name in uppercase is {{ dataForm.fullName | uppercase}} </span>
+
+        <br/>
+        <br/>
+        <h3>Course List</h3>
+        <form @submit.prevent="sendCourses">
+            <li v-for="question in questions">
+                {{question.name}}
+                <br/>
+                <template v-for="option in question.options">
+                    <input type="checkbox" :id="option.id" :value="option.id" v-model="dataForm.courses"/>
+                    <label :for="option.id">{{ option.name }}</label>
+                </template>
+            </li>
+            <button type="submit">send</button>
+        </form>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
@@ -27,7 +49,13 @@
                 hasProfile: true,
                 showData: true,
 
-                counter: 0
+                counter: 0,
+
+                dataForm: {  
+                        fullName: '',
+                        courses: []
+                    },
+                questions: []
             },
             methods: {
                 sumCounter: function() {
@@ -35,6 +63,31 @@
                 },
                 diffCounter: function() {
                     this.counter--
+                },
+                mockDataQuetions: function(){
+                    this.questions = [
+                        {
+                            name: "Cuales son tus cursos Favoritos?",
+                            options: [
+                                {
+                                    id: 1,
+                                    name: "Vue.js"
+                                },
+                                {
+                                    id: 2,
+                                    name: "Angular.js"
+                                },
+                                {
+                                    id: 3,
+                                    name: "React.js"
+                                }
+                            ]
+                        }
+                    ]
+                },
+                sendCourses: function(event){
+                    console.log('send... ', event)
+                    console.log('courses selected ', this.dataForm.courses)
                 }
             },
             filters: {
@@ -47,6 +100,9 @@
                 capitalize: str => {
                     return str.charAt(0).toUpperCase() + str.slice(1);
                 }
+            },
+            mounted() {
+                this.mockDataQuetions()
             }
         })
     </script>
