--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
                 {{question.name}}
                 <br/>
                 <template v-for="option in question.options">
-                    <input type="checkbox" :id="option.id" :value="option.id" v-model="dataForm.courses"/>
-                    <label :for="option.id">{{ option.name }}</label>
+                    <course :option="option" :user-data="dataForm"></course>
                 </template>
             </li>
             <button type="submit">send</button>
@@ -41,6 +40,15 @@
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script type="text/javascript">
+        Vue.component('course', {
+            props: ['option', 'userData'],
+            template: `
+                <div>
+                    <input type="checkbox" :id="option.id" :value="option.id" v-model="userData.courses"/>
+                    <label :for="option.id">{{ option.name }}</label>
+                </div>
+            `
+        })
         let app = new Vue({
             el: '#app',
             data: {
